# claudio

./: .dockerignore  .gcloudignore  .gitignore  1_INTENT.md  2_ARCHITECTURE_RULES.md  3_SYSTEM_STATE.md  CLAUDE.md  CMakeLists.txt  Dockerfile  GEMINI.md  README.md  pyproject.toml
.agents/workflows/: branch-protection.md  branch-workflow.md  code-hygiene.md
.gemini/antigravity/brain/48506ba8-c903-480f-8f8a-0866d0e38be3/: ddsp_stress_report.md
.github/workflows/: claudio-ci.yml  deploy-backend.yml  deploy-frontend.yml
assets/audio_lab/: scenario_a_sota_control.flac
assets/hrtf/: README.md
checkpoints/: forge_model_best.pt
configs/: gesture_map.yaml
demo_output/: index.html
docs/: SPATIAL_AUDIO.md
dsp/: CMakeLists.txt
dsp/codec/: SemanticPacketizer.hpp
dsp/intent/: CMakeLists.txt  intent_extractor.cpp
dsp/spatial/: AcousticRaytracer.cpp  AcousticRaytracer.hpp  CMakeLists.txt  HRTFConvolutionEngine.cpp  HRTFConvolutionEngine.hpp  HolographicBinauralNode.cpp  HolographicBinauralNode.hpp  QuaternionRingBuffer.hpp
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/models/: ddsp_model.onnx.data
frontend/src/: App.tsx  index.css
frontend/src/components/: ActiveStage.tsx  BTLatencyPanel.tsx  CodecSelector.tsx  D2D_62acacb1_Widget.tsx  DumbStudioVisuals.tsx  GeometricFracture.tsx  InstrumentDetector.tsx  IntentVisualizer.ts  JoinCard.tsx  Knob.tsx  LatencyPanel.tsx  MentorCard.tsx  MidiPanel.tsx  PhaseMeter.tsx  RTCalibrationPanel.tsx  RoadmapOverlay.tsx  RoomScannerPanel.tsx  SpectrumAnalyzer.tsx  StudioEffectsChain.tsx  StudioHeader.tsx  StudioSpatialPanel.tsx  SweetSpotHUD.tsx  WaveformViewer.tsx  styles.ts
frontend/src/components/ui/: EffectsBento.tsx  OscillatorBento.tsx  (+2 more)
frontend/src/engine/: AudioEngine.ts  AudioEngineExtensions.ts  DDSPDecoder.ts  HarmonicSynth.ts  IntentAudioOutput.ts  IntentEngine.ts  IntentTelemetry.ts  IntentWebRTC.ts  RTCalibrationEngine.ts  ResynthEngine.ts  codecProfiles.ts  dsp.ts  protocol.ts  protocolSpike.js  protocolSpike.ts  types.ts
frontend/src/hooks/: useClaudioSocket.ts
frontend/src/pages/: CollabPage.tsx  D2D_62acacb1_Page.tsx  StudioPage.tsx  StudioPageWithBT.tsx
frontend/src/spatial/: HeadTracker.ts  SpatialEngine.ts
scripts/: audio_lab_bouncer.py  audio_metrology.py  benchmark_classifiers.py  demo_vertical_slice.py  deploy_backend.sh  deploy_frontend.sh  evaluate_fidelity.py  export_onnx.py  generate_test_audio.py  proof_spike.py  refactor_frontend.py  refactor_intent.py  refactor_studiopage.py  render_original_mix.py  simulate_ddsp_onnx.py  simulate_global_peers.py  simulate_multitrack.py  spectrogram_diff.py  start_learning_loop.sh  stress_tester.py  train.py  train_forge.py  validate_codec.py
src/: run_demo.py
src/claudio/: __init__.py  audio_analysis.py  audio_demo.py  audio_demo_runner.py  audio_demo_server.py  audio_ingestion.py  audio_quality_proof.py  audio_verify.py  benchmark_fidelity.py  benchmark_report.py  claudio_stress_sim.py  demo_player_template.py  demo_server.py  demo_upload_template.py  hrtf_data.py  hrtf_engine.py  quality_config.py  quality_test_suite.py  quality_tests_distortion.py  quality_tests_dynamic.py  quality_tests_spectral.py  real_data_validator.py  realtime_benchmark.py  realtime_capture.py  realtime_dashboard.html  realtime_engine.py  realtime_hifi.py  realtime_hifi_cli.py  realtime_intelligence.py  realtime_mic.py  realtime_test_tone.py  signal_flow_config.py  signal_flow_metrics.py  signal_flow_simulator.py  sofa_loader.py
src/claudio/codec/: __init__.py  neural_codec.py
src/claudio/collab/: __init__.py  session_manager.py  webrtc_manager.py
src/claudio/forge/: __init__.py
src/claudio/intelligence/: __init__.py  autonomous_trainer.py  backend_beats.py  backend_clap.py  backend_factory.py  backend_panns.py  classifier_backend.py  gemini_coach.py  harmonic_profiler.py  instrument_classifier.py  instrument_profiles.py  multimodal_fusion.py  phase_detector.py  pickup_detector.py  room_scanner.py  room_treatment.py  spectral_extractor.py  sweet_spot_engine.py  transient_analyzer.py
src/claudio/intent/: __init__.py  intent_decoder.py  intent_encoder.py  intent_protocol.py
src/claudio/learning/: AutoTuner.py  OfflineValidator.py
src/claudio/mentor/: __init__.py  knowledge_base.py  mentor_tips.py  roadmap_engine.py  roadmap_phases.py
src/claudio/metering/: __init__.py  acoustic_advisor.py  semantic_metering.py  topographic_map.py
src/claudio/neural/: super_res.py
src/claudio/server/: __init__.py  auth.py  billing.py  claudio_server.py  collab_router.py  ws_session.py
src/claudio/vision/: __init__.py  gesture_classifier.py  gesture_heuristics.py  gesture_router.py  head_tracker.py  sensor_loop.py
src/claudio/watcher/: __init__.py  ai_thought_log.py
src/tooloo/artifacts/: spec.json
studio/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
studio/src/: App.tsx  index.css
studio/src/pages/: CopyrightLedger.tsx  GhostScheduler.tsx  HardwareAuth.tsx  ToneVault.tsx  VenueManager.tsx  index.ts
tests/: benchmark_resynthesis.py  benchmark_superiority.py  benchmark_utils.py  simulate_pure_intent.py  test_ai_thought_log.py  test_articulation.py  test_collab_e2e.py  test_collab_session.py  test_danger_room_intelligence.py  test_forge_model.py  test_gesture_classifier.py  test_hrtf_engine.py  test_intent_hardening.py  test_intent_pipeline.py  test_neural_codec.py  test_semantic_metering.py  test_signal_flow.py  test_sofa_loader.py  test_webrtc_integration.py  test_ws_auth.py
tests/adversary/: CMakeLists.txt  SpatialLatencyGate.cpp
tools/: export_dummy_ddsp.py  generate_ab_demo.py
training_forge/: augment_dataset.py  calibration_camp.py  dataset.py  download_dataset.py  evaluate.py  export_onnx.py  extract_dataset.py  fetch_ir_library.py  fetch_multitracks.py  fidelity_analyzer.py  fidelity_metrics.json  generate_reverse_delta_tests.py  loss.py  model.py  pyproject.toml  refine_loop.py  synth.py  train.py
(+12 files in other folders)
