[project]
name = "claudio"
version = "1.0.0"
description = "Real-Time AI Musician Collaboration Platform"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "torch>=2.2",
    "torchaudio>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
vision = [
    "mediapipe>=0.10",
    "python-osc>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
