[project]
name = "claudio"
version = "1.1.0"
description = "Real-Time AI Musician Collaboration Platform"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ori Pridan"}]
keywords = ["audio", "ai", "instruments", "binaural", "hrtf", "spatial-audio"]
dependencies = [
    "numpy>=1.26",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "websockets>=12.0",
    "torch>=2.2",
    "torchaudio>=2.2",
]

[project.urls]
Repository = "https://github.com/oripridan/claudio"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pip-audit>=2.7",
]
vision = [
    "mediapipe>=0.10",
    "python-osc>=1.8",
    "sounddevice>=0.4",
]
ai = [
    "panns-inference>=0.1",
    "transformers>=4.30",
    "laion-clap>=1.0",
    "soundfile>=0.12",
    "librosa>=0.10",
]
coaching = [
    "google-genai>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM102", "SIM108", "SIM110"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["claudio"]
