[project]
name = "claudio"
version = "3.0.0"
description = "Real-Time AI Musician Collaboration Platform"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ori Pridan"}]
keywords = ["audio", "ai", "instruments", "binaural", "hrtf", "spatial-audio"]
dependencies = [
    "numpy>=1.26",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "websockets>=12.0",
    "pyjwt>=2.8",
    "aiortc>=0.9.1",
    "python-dotenv>=1.0.1",
]

[project.urls]
Repository = "https://github.com/oripridan/claudio"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=5.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "pip-audit>=2.7",
]

[project.optional-dependencies]
vision = [
    "mediapipe>=0.10",
    "python-osc>=1.8",
    "sounddevice>=0.4",
]
ai = [
    "panns-inference>=0.1",
    "transformers>=4.30",
    "laion-clap>=1.0",
    "soundfile>=0.12",
    "librosa>=0.10",
]
coaching = [
    "google-genai>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM102", "SIM108", "SIM110"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "F841"]
"src/claudio/metering/semantic_metering.py" = ["F401", "E402"]  # intentional re-exports

[tool.ruff.lint.isort]
known-first-party = ["claudio"]
