[project]
name = "training-forge"
version = "0.1.0"
description = "Isolated ML Pipeline for Claudio Neural Vocoder"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "onnx>=1.15.0",
    "onnxscript",
    "librosa>=0.10.1",
    "numpy>=1.26.0",
    "onnxruntime>=1.24.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E402: warnings.filterwarnings("ignore") before imports is intentional in refine_loop.py
# to suppress PyTorch deprecation warnings before the heavy import chain fires.
# SIM401: ckpt.get() is fine — already applied. Remaining SIM401 references are false positives.
per-file-ignores = { "refine_loop.py" = ["E402"], "synth.py" = ["F401"] }
